# D4-real-Solver

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
samples/: H.json  map.json  reps.json  shapes.json  triangle_J.json
schemas/: boundaries_signed.schema.json  complex.schema.json  homotopy.schema.json  map.schema.json  map_signed.schema.json  reps.schema.json  shapes.schema.json  support.schema.json  triangle.schema.json
src/otc/: __init__.py  app_helpers.py  chain.py  checks.py  gf2.py  gf2_solve.py  shape_validate.py  towers.py  triangle_builder.py
