[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otc-4d-sanity-runner"
version = "0.1.0"
description = "Streamlit app & library to run Odd-Tetra Certificate 4D sanity tests"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "streamlit",
  "numpy",
  "pandas",
]

[project.urls]
Homepage = "https://github.com/yourname/otc-4d-sanity-runner"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["otc*"]

[tool.setuptools.package-data]
otc = []
